# Author: Goutam Adwant
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "toolcallcheck"
version = "0.2.0"
description = "Deterministic Python testing for tool-using agents. Mock MCP tools, assert exact tool calls and trajectories, verify headers, and run offline in CI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Goutam Adwant" }]
keywords = [
    "agent-testing",
    "ai-agents",
    "deterministic-testing",
    "llm-testing",
    "mcp",
    "model-context-protocol",
    "offline-testing",
    "pytest",
    "regression-testing",
    "tool-calling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Framework :: Pytest",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "deepdiff>=7.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=6.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.119.0",
    "pip-audit>=2.8.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/adwantg/toolcallcheck"
Repository = "https://github.com/adwantg/toolcallcheck"
Issues = "https://github.com/adwantg/toolcallcheck/issues"

[project.entry-points."pytest11"]
toolcallcheck = "toolcallcheck.fixtures"

[tool.hatch.build.targets.wheel]
packages = ["src/toolcallcheck"]
core-metadata-version = "2.3"

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.3"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = ["skills", ".venv", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["deepdiff.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
xfail_strict = true
markers = [
    "agent_behavior: tests for standard agent behavior flows",
    "agent_error: tests for agent error handling paths",
    "agent_multi_turn: tests for multi-turn conversation flows",
    "agent_offline: tests that verify offline/network-safe execution",
]

[tool.coverage.run]
source_pkgs = ["toolcallcheck"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "pass",
    "pragma: no cover",
]
